# car_rental_pet

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  ssl_context_ignore.py
scripts/: entrypoint_backend.sh
src/api/auth/: auth.py  password_reset.py
src/api/auth/templates/: password_reset.html
src/api/booking/: booking.py
src/api/car/: car.py  cart.py
src/api/cart/: cart.py
src/api/currency/: currency_exchange.py
src/api/options/: options.py
src/api/payment/: payment.py
src/api/promocode/: promocode.py
src/api/user/: user.py
src/core/config/: base_config.py  config.py  google_oid_config.py
src/core/logger/: logger.py
src/db/: database.py  redis.py
src/models/: __init__.py  bookings.py  cars.py  payments.py  promocodes.py  users.py
src/repository/: booking.py  car.py  cart.py  options.py  payment.py  promocode.py  user.py
src/schemas/: booking.py  car.py  cart.py  password_reset.py  promocode.py  user.py
src/services/: auth.py  availabilities.py  booking_services.py  booking_servis.py  car_avalbilitie.py  cart_services.py  password_reset_services.py  password_strength.py  payment_services.py  promocode_service.py  roles.py
src/services/currency/: currency_exchange.py  сurrency_decorator.py
src/services/google_oid/: google_oid.py
src/services/google_oid/templates/templates/: app.vue  main.js
src/services/messages/: car_subscription_consumer.py  car_subscription_producer.py  email.py  message_sub_consumer.py  message_sub_producer.py  password_reset_consumer.py  password_reset_producer.py
src/services/messages/templates/: email_confirmation.html  password_reset.html
tests/: email_messages_test.py
(+2 files in other folders)
