[tool.poetry]
name = "petproject1"
version = "0.1.0"
description = ""
authors = ["KatanaDevel"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
uvicorn = "^0.35.0"
alembic = "^1.16.4"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
fastapi = "^0.116.1"
redis = "^6.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.30.0"
greenlet = "^3.2.3"
psycopg2-binary = "^2.9.10"
fastapi-limiter = "^0.1.6"
jwt = "^1.4.0"
python-jose = "^3.5.0"
python-multipart = "^0.0.20"
bcrypt = "<4.1.0"
password-validator = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"